--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business promotion</title>
+    <title>Business promo</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./images/logo.png" alt="logo" </a>
+        <a href="index.html"> <img src="images/logo.png" alt="logo" </a>
         <ul>
-          <li>a href="/index.html" </li>
-          <li>a href="/pricing.html"</li>
-          <li>a href="/customer.html"</li>
-          <li>a href="</li>
+          <li><a href="./index.html">Products</a></li>
+          <li><a href="./pricing.html">Pricing</a></li>
+          <li><a href="./customer.html">Customers</a></li>
+          <li><a href="">Resources</a></li>
         </ul>
       </nav>
       <ul>
@@ -21,9 +21,242 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
+
     <main>
-        <section>Work at the speed
-of thought</section>
+      <section>
+        <h1>Work at the speed of thought</h1>
+        <p>
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience.
+        </p>
+        <ul>
+          <li><button type="button">Get started</button></li>
+          <li><button type="button">Watch the Video</button></li>
+        </ul>
+        <img src="./images/hero-img.png"
+      </section>
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+          <li>
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling</p>
+          </li>
+          <li>
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <h3>Five second tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+        </ul>
+        <button type="button">Sing up now</button>
+      </section>
+
+      <section>
+        <h2>Effortless Validation for Management</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <h4>Accessory makers</h4>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h4>Alterationists</h4>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img src="./images/management.png" alt="management" />
+      </section>
+      <section>
+        <h2>Customer Support</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li><p>Never worry about overpaying for your energy again.</p></li>
+          <li>
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </li>
+          <li>
+            <p>We track the markets daily and know where the savings are.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Optimisation for Collaborative</h2>
+        <p>
+          Few would argue that, despite the advancements of feminism over the
+          past three decades, women still face a double standard when it comes
+          to their behavior.
+        </p>
+        <ul>
+          <li>
+            <h4>Accessory makers</h4>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h4>Alterationists</h4>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img src="./images/avatar-one.png" alt="avatar-one" />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <p>I can take care of your pitch</p>
+            <img src="./images/avatar-two.png" alt="avatar-two" />
+          </li>
+          <li>
+            <p>I can prototype your app</p>
+            <img src="./images/avatar-three.png " alt="avatar-three" />
+          </li>
+          <li>
+            <img src="./images/avatar-four.png" alt="avatar-four" />
+            <p>I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+      <section>
+        <h3>Contents Strategies</h3>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/computer.jpg" alt="computer" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h4>Increasing Prosperity With Positive Thinking</h4>
+          </li>
+          <li>
+            <img src="./images/panorama.jpg" alt="panorama" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h4>Motivation Is The First Step To Success</h4>
+          </li>
+          <li>
+            <img src="./images/building.jpg" alt="building" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h4>Success Steps For Your Personal Or Business</h4>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Price Table</h3>
+        <p>We offer competitive price</p>
+        <ul>
+            <li>
+                <h5>Free</h5>
+                <p>Brief price description</p>
+                <ul>
+                    <p>O $</p> 
+                    <p>Per / month</p>
+                    <li>
+                        <p>Only 2 Operators</p>
+                        <p>Notifications</p>
+                        <p>Landing Pages</p>
+                    </li>
+                </ul>
+                <button type="button">Order Now</button>
+            </li>
+            <li>
+                <h5>Standard</h5>
+                <p>Brief price description</p>
+                <ul>
+                    <p>5 $</p> 
+                    <p>Per / month</p>
+                    <li>
+                        <p>5+ Operators</p>
+                        <p>Notifications</p>
+                        <p>Landing Pages</p>
+                    </li>
+                </ul>
+                  <button type="button">Order Now</button>
+            </li>
+                <h5>Premium</h5>
+                <p>Brief price description</p>
+                <ul>
+                    <p>1O $</p> 
+                    <p>Per / month</p>
+                    <li>
+                        <p>10+ Operators</p>
+                        <p>Notifications</p>
+                        <p>Landing Pages</p>
+                    </li>
+                </ul>
+                <button type="button">Order Now</button>
+            </li>
+        </ul>
+        </ul>
+      </section>
+      <section>
+    <h3>What Clients Say</h3>
+    <P>Problems trying to resolve the conflict between 
+the two major realms of Classical physics: Newtonian mechanics </P>
+<ul>
+    <li>
+        <p>Product helps you see how many 
+more days you need to work to 
+reach your financial goal.</p>
+        <img src="" alt="">
+        <alt>Wahid Ari</alt>
+        <h5>Wahid Ari</h5>
+        <p>Designer</p>
+    </li>
+    <li>
+        <p>Product helps you see how many 
+more days you need to work to 
+reach your financial goal.</p>
+        <img src="" alt="">
+        <alt>Wahid Ari</alt>
+        <h5>Wahid Ari</h5>
+        <p>Designer</p>
+    </li>
+    <li>
+        <p>Product helps you see how many 
+more days you need to work to 
+reach your financial goal.</p>
+        <img src="" alt="">
+        <alt>Wahid Ari</alt>
+        <h5>Wahid Ari</h5>
+        <p>Designer</p>
+    </li>
+</ul>
+      </section>
     </main>
     <footer></footer>
   </body>
