--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <header>
       <nav>
-        <a href="index.html"> <img src="images/logo.png" alt="logo" </a>
+        <img src="images/logo.png" alt="logo">
+        <a href="index.html">Product</a>
         <ul>
           <li><a href="./index.html">Products</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
@@ -232,7 +233,7 @@ the two major realms of Classical physics: Newtonian mechanics </P>
         <p>Product helps you see how many 
 more days you need to work to 
 reach your financial goal.</p>
-        <img src="" alt="">
+        <img src="./images/client-one.png" alt="client-one">
         <alt>Wahid Ari</alt>
         <h5>Wahid Ari</h5>
         <p>Designer</p>
@@ -241,7 +242,7 @@ reach your financial goal.</p>
         <p>Product helps you see how many 
 more days you need to work to 
 reach your financial goal.</p>
-        <img src="" alt="">
+        <img src="./images/client-two.png" alt="client-two">
         <alt>Wahid Ari</alt>
         <h5>Wahid Ari</h5>
         <p>Designer</p>
@@ -250,14 +251,42 @@ reach your financial goal.</p>
         <p>Product helps you see how many 
 more days you need to work to 
 reach your financial goal.</p>
-        <img src="" alt="">
+        <img src="./images/client-three.png" alt="client-three">
         <alt>Wahid Ari</alt>
         <h5>Wahid Ari</h5>
         <p>Designer</p>
     </li>
 </ul>
       </section>
+      <section>
+    <p>Join 100 Compannies who boost their business with Product</p>
+    <button type="button">Get This</button>
+    <img src:"./images/graphics.png" alt="graphics" />
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+     <img src="images/logo.png" alt="logo">
+    <a href="index.html">Product</a>
+    <ul>
+        <li>
+            <h4>Resource</h4>
+            <p>About Us</p>
+            <p>Blog</p>
+            <p>Contact</p>
+            <p>FAQ</p>
+        </li>
+         <li>
+            <h4>Legal Stuff</h4>
+            <p>Disclaimer</p>
+            <p>Financing</p>
+            <p>Privacy Policy</p>
+        </li>
+    </ul>
+    <h3>knowing you're always on the best energy deal. 
+</h3>
+<button type="button">Sign Up Now</button>
+<p>Made With Love By Figmaland All Right Reserved 
+</p>
+ </footer>
   </body>
 </html>
