--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
         </ul>
-        <img src="./images/hero-img.png"
+        <img src="./images/hero-img.png">
       </section>
       <section>
         <h2>Product was Built Specifically for You</h2>
@@ -184,8 +184,8 @@
                 <h5>Free</h5>
                 <p>Brief price description</p>
                 <ul>
-                    <p>O $</p> 
-                    <p>Per / month</p>
+                    <li><p>O $</p> 
+                    <p>Per / month</p></li>
                     <li>
                         <p>Only 2 Operators</p>
                         <p>Notifications</p>
@@ -198,8 +198,8 @@
                 <h5>Standard</h5>
                 <p>Brief price description</p>
                 <ul>
-                    <p>5 $</p> 
-                    <p>Per / month</p>
+                    <li><p>5 $</p> 
+                    <p>Per / month</p></li>
                     <li>
                         <p>5+ Operators</p>
                         <p>Notifications</p>
@@ -211,8 +211,8 @@
                 <h5>Premium</h5>
                 <p>Brief price description</p>
                 <ul>
-                    <p>1O $</p> 
-                    <p>Per / month</p>
+                    <li><p>1O $</p> 
+                    <p>Per / month</p></li>
                     <li>
                         <p>10+ Operators</p>
                         <p>Notifications</p>
