--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <img src="images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo" />
         <a href="index.html">Product</a>
         <ul>
           <li><a href="./index.html">Products</a></li>
@@ -34,7 +34,7 @@
           <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
         </ul>
-        <img src="./images/hero-img.png">
+        <img src="./images/hero-img.png" alt="hero" />
       </section>
       <section>
         <h2>Product was Built Specifically for You</h2>
@@ -179,114 +179,102 @@
       <section>
         <h3>Price Table</h3>
         <p>We offer competitive price</p>
+
+        <h4>Free</h4>
+
         <ul>
-            <li>
-                <h5>Free</h5>
-                <p>Brief price description</p>
-                <ul>
-                    <li><p>O $</p> 
-                    <p>Per / month</p></li>
-                    <li>
-                        <p>Only 2 Operators</p>
-                        <p>Notifications</p>
-                        <p>Landing Pages</p>
-                    </li>
-                </ul>
-                <button type="button">Order Now</button>
-            </li>
-            <li>
-                <h5>Standard</h5>
-                <p>Brief price description</p>
-                <ul>
-                    <li><p>5 $</p> 
-                    <p>Per / month</p></li>
-                    <li>
-                        <p>5+ Operators</p>
-                        <p>Notifications</p>
-                        <p>Landing Pages</p>
-                    </li>
-                </ul>
-                  <button type="button">Order Now</button>
-            </li>
-                <h5>Premium</h5>
-                <p>Brief price description</p>
-                <ul>
-                    <li><p>1O $</p> 
-                    <p>Per / month</p></li>
-                    <li>
-                        <p>10+ Operators</p>
-                        <p>Notifications</p>
-                        <p>Landing Pages</p>
-                    </li>
-                </ul>
-                <button type="button">Order Now</button>
-            </li>
+          <li><p>Brief price description</p></li>
+          <li><p>O $ Per / month</p></li>
+          <li><p>Only 2 Operators</p></li>
+          <li><p>Notifications</p></li>
+          <li><p>Landing Pages</p></li>
         </ul>
+        <button type="button">Order Now</button>
+
+        <h4>Standard</h4>
+        <ul>
+          <li><p>Brief price description</p></li>
+          <li><p>5 $ Per / month</p></li>
+          <li><p>5+ Operators</p></li>
+          <li><p>Notifications</p></li>
+          <li><p>Landing Pages</p></li>
+        </ul>
+        <button type="button">Order Now</button>
+
+        <h5>Premium</h5>
+        <ul>
+          <li><p>Brief price description</p></li>
+          <li><p>1O $ Per / month</p></li>
+          <li><p>10+ Operators</p></li>
+          <li><p>Notifications</p></li>
+          <li><p>Landing Pages</p></li>
+        </ul>
+        <button type="button">Order Now</button>
+      </section>
+
+      <section>
+        <h3>What Clients Say</h3>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/client-one.png" alt="client-one" />
+            <h5>Wahid Ari</h5>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/client-two.png" alt="client-two" />
+            <h5>Wahid Ari</h5>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/client-three.png" alt="client-three" />
+            <h5>Wahid Ari</h5>
+            <p>Designer</p>
+          </li>
         </ul>
       </section>
       <section>
-    <h3>What Clients Say</h3>
-    <P>Problems trying to resolve the conflict between 
-the two major realms of Classical physics: Newtonian mechanics </P>
-<ul>
-    <li>
-        <p>Product helps you see how many 
-more days you need to work to 
-reach your financial goal.</p>
-        <img src="./images/client-one.png" alt="client-one">
-        <alt>Wahid Ari</alt>
-        <h5>Wahid Ari</h5>
-        <p>Designer</p>
-    </li>
-    <li>
-        <p>Product helps you see how many 
-more days you need to work to 
-reach your financial goal.</p>
-        <img src="./images/client-two.png" alt="client-two">
-        <alt>Wahid Ari</alt>
-        <h5>Wahid Ari</h5>
-        <p>Designer</p>
-    </li>
-    <li>
-        <p>Product helps you see how many 
-more days you need to work to 
-reach your financial goal.</p>
-        <img src="./images/client-three.png" alt="client-three">
-        <alt>Wahid Ari</alt>
-        <h5>Wahid Ari</h5>
-        <p>Designer</p>
-    </li>
-</ul>
-      </section>
-      <section>
-    <p>Join 100 Compannies who boost their business with Product</p>
-    <button type="button">Get This</button>
-    <img src:"./images/graphics.png" alt="graphics" />
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <button type="button">Get This</button>
+        <img src="./images/graphics.png" alt="graphics" />
       </section>
     </main>
     <footer>
-     <img src="images/logo.png" alt="logo">
-    <a href="index.html">Product</a>
-    <ul>
+      <img src="images/logo.png" alt="logo" />
+      <a href="index.html">Product</a>
+      <ul>
         <li>
-            <h4>Resource</h4>
-            <p>About Us</p>
-            <p>Blog</p>
-            <p>Contact</p>
-            <p>FAQ</p>
+          <h4>Resource</h4>
+          <p>About Us</p>
+          <p>Blog</p>
+          <p>Contact</p>
+          <p>FAQ</p>
         </li>
-         <li>
-            <h4>Legal Stuff</h4>
-            <p>Disclaimer</p>
-            <p>Financing</p>
-            <p>Privacy Policy</p>
+        <li>
+          <h4>Legal Stuff</h4>
+          <p>Disclaimer</p>
+          <p>Financing</p>
+          <p>Privacy Policy</p>
         </li>
-    </ul>
-    <h3>knowing you're always on the best energy deal. 
-</h3>
-<button type="button">Sign Up Now</button>
-<p>Made With Love By Figmaland All Right Reserved 
-</p>
- </footer>
+      </ul>
+      <h3>knowing you're always on the best energy deal.</h3>
+      <button type="button">Sign Up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
