--- a/customer.html
+++ b/customer.html
@@ -27,100 +27,108 @@
       <section>
         <h2>Our Clients</h2>
         <ul>
-            <li>
-                <img src="./images/airbnb-logo .png" alt="airbnb-logo" />
-            </li>
-            <li>
-                <img src="./images/google-logo.png" alt="google-logo" />
-            </li>
-            <li>
-                <img src="./images/microsoft-logo.png" alt="microsoft-logo" />
-            </li>
-            <li>
-                <img src="./images/fedex-logo.png" alt="fedex-logo" />
-            </li>
+          <li>
+            <img src="./images/airbnb-logo.png" alt="airbnb-logo" />
+          </li>
+          <li>
+            <img src="./images/google-logo.png" alt="google-logo" />
+          </li>
+          <li>
+            <img src="./images/microsoft-logo.png" alt="microsoft-logo" />
+          </li>
+          <li>
+            <img src="./images/fedex-logo.png" alt="fedex-logo" />
+          </li>
         </ul>
-    </section>
-    <section>
+      </section>
+      <section>
         <h2>Why Choose Product?</h2>
         <ul>
-            <li>
-                <h3>Special Business</h3>
-                <p>Product helps you see how many 
-more days you need to work 
-to reach your financial goal 
-for the month and year.</p>
-            </li>
-            <li>
-                <h3>Instant Result</h3>
-                <p>Product helps you see how many 
-more days you need to work 
-to reach your financial goal 
-for the month and year.</p>
-            </li>
-            <li>
-                <h3>Fastest way to organize</h3>
-                <p>Product helps you see how many 
-more days you need to work 
-to reach your financial goal 
-for the month and year.</p>
-            </li>
+          <li>
+            <h3>Special Business</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+          <li>
+            <h3>Instant Result</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+          <li>
+            <h3>Fastest way to organize</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
         </ul>
-    </section>
-    <section>
+      </section>
+      <section>
         <h2>How Product Work?</h2>
         <ul>
-            <li>
-                <img src="./images/mac-white.png" alt="mac-white" />
-                <h3>Step 1 Apply for a product</h3>
-                <p>Completing our easy step-by-step application form gives you access to multiple business with multiple products. We analyse your business through our proprietary credit analysis technology </p>
-            </li>
-            <li>
-                <h3>Step 2 Pay fully refundable</h3>
-                <p>Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available, your fee will be fully refunded.</p>
-                <img src="./images/mac-black.png" alt="mac-black" />
-            </li>
-            <li>
-                <img src="./images/screen-mask.png" alt="screen-mask" />
-                <h3>Step 3 Completion</h3>
-                <p>Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
-            </li>
+          <li>
+            <img src="./images/mac-white.png" alt="mac-white" />
+            <h3>Step 1 Apply for a product</h3>
+            <p>
+              Completing our easy step-by-step application form gives you access
+              to multiple business with multiple products. We analyse your
+              business through our proprietary credit analysis technology
+            </p>
+          </li>
+          <li>
+            <h3>Step 2 Pay fully refundable</h3>
+            <p>
+              Product will contactting you instantly to receive payment of the
+              Application Fee. if no offer of product is available, your fee
+              will be fully refunded.
+            </p>
+            <img src="./images/mac-black.png" alt="mac-black" />
+          </li>
+          <li>
+            <img src="./images/screen-mask.png" alt="screen-mask" />
+            <h3>Step 3 Completion</h3>
+            <p>
+              Product will continue to liase between borrower and manager to
+              procees and complete a quick and efficient settlement
+            </p>
+          </li>
         </ul>
         <button type="button">Get in touch with us</button>
-    </section>
-    <section>
-        <h2>Join thousand of other who have
-already received offers</h2>
+      </section>
+      <section>
+        <h2>Join thousand of other who have already received offers</h2>
         <h3>Business</h3>
-<ul>
-    <li>
-        <p>Cash Flow</p>
-    </li>
-    <li>
-        <p>Asset Backed</p>
-    </li>
-    <li>
-        <p>Receivables Finance</p>
-    </li>
-    </ul>
+        <ul>
+          <li>
+            <p>Cash Flow</p>
+          </li>
+          <li>
+            <p>Asset Backed</p>
+          </li>
+          <li>
+            <p>Receivables Finance</p>
+          </li>
+        </ul>
         <p>Find the best business product</p>
 
         <h3>Enterprise</h3>
-<ul>
-    <li>
-        <p>Site Acquisition</p>
-    </li>
-    <li>
-        <p>Bridge</p>
-    </li>
-    <li>
-        <p>Development Financing</p>
-    </li>
-    </ul>
+        <ul>
+          <li>
+            <p>Site Acquisition</p>
+          </li>
+          <li>
+            <p>Bridge</p>
+          </li>
+          <li>
+            <p>Development Financing</p>
+          </li>
+        </ul>
         <p>Find the best business product</p>
-
-    </section>
-    <section>
+      </section>
       <section>
         <p>Join 100 Compannies who boost their business with Product</p>
         <button type="button">Get This</button>
