--- a/index.html
+++ b/index.html
@@ -3,24 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promo</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <img src="images/logo.png" alt="logo" />
-        <a href="index.html">Product</a>
-        <ul>
-          <li><a href="./index.html">Products</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customer.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+    <header class="header">
+      <div class="header-container container">
+        <nav class="header-nav">
+          <img src="images/logo.png" class="logo header-logo" />
+          <a href="index.html" class="header-logo-nav">Product</a>
+
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a href="./index.html" class="item-nav-link">Products</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="./pricing.html" class="item-nav-link">Pricing</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="./customer.html" class="item-nav-link">Customers</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="" class="item-nav-link">Resources</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-btn-list">
+          <li class="header-btn-item">
+            <button type="button" class="header-btn-link">Sign In</button>
+          </li>
+          <li class="header-btn-item-">
+            <button type="button" class="header-btn-link">Sign Up</button>
+          </li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
 
     <main>
@@ -176,40 +206,81 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Price Table</h3>
-        <p>We offer competitive price</p>
+      <section class="price">
+        <div class="container">
+          <h2 class="price-title">Price Table</h2>
+          <p class="price-text">We offer competitive price</p>
 
-        <h4>Free</h4>
+          <ul class="price-list">
+            <li class="price-item">
+              <h3 class="price-item-title">Free</h3>
+              <p class="price-item-text">Brief price description</p>
+              <div class="price-item-inner">
+                <h4 class="price-item-number">O</h4>
+                <div class="price-item-content">
+                  <p class="price-item-currency">$</p>
+                  <p class="price-item-term">Per / month</p>
+                </div>
+              </div>
+              <ul class="price-inner">
+                <li class="inner--item">
+                  <h5 class="inner--item_item">Only 2 Operators</h5>
+                </li>
+                <li class="inner--item">
+                  <h5 class="inner--item_item">Notifications</h5>
+                </li>
+                <li class="inner--item">
+                  <h5 class="inner--item_item">Landing Pages</h5>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button type="button" class="price-btn">Order Now</button>
 
-        <ul>
-          <li><p>Brief price description</p></li>
-          <li><p>O $ Per / month</p></li>
-          <li><p>Only 2 Operators</p></li>
-          <li><p>Notifications</p></li>
-          <li><p>Landing Pages</p></li>
-        </ul>
-        <button type="button">Order Now</button>
+          <ul class="price-list">
+            <li class="price-item">
+              <h3 class="price-item-title">Standard</h3>
+              <p class="price-item-text">Brief price description</p>
+              <div class="price-item-inner">
+                <h4 class="price-item-number">5</h4>
+                <div class="price-item-content">
+                  <p class="price-item-currency">$</p>
+                  <p class="price-item-term">Per / month</p>
+                </div>
+              </div>
+              <ul class="price-inner">
+                <li class="inner--item">
+                  <h5 class="inner--item_item">5+ Operators</h5>
+                  <h5 class="inner--item_item">Notifications</h5>
+                  <h5 class="inner--item_item">Landing Pages</h5>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button type="button" class="price-btn">Order Now</button>
 
-        <h4>Standard</h4>
-        <ul>
-          <li><p>Brief price description</p></li>
-          <li><p>5 $ Per / month</p></li>
-          <li><p>5+ Operators</p></li>
-          <li><p>Notifications</p></li>
-          <li><p>Landing Pages</p></li>
-        </ul>
-        <button type="button">Order Now</button>
-
-        <h4>Premium</h4>
-        <ul>
-          <li><p>Brief price description</p></li>
-          <li><p>1O $ Per / month</p></li>
-          <li><p>10+ Operators</p></li>
-          <li><p>Notifications</p></li>
-          <li><p>Landing Pages</p></li>
-        </ul>
-        <button type="button">Order Now</button>
+          <ul class="price-list">
+            <li class="price-item">
+              <h3 class="price-item-title">Premium</h3>
+              <p class="price-item-text">Brief price description</p>
+              <div class="price-item-inner">
+                <h4 class="price-item-number">1O</h4>
+                <div class="price-item-content">
+                  <p class="price-item-currency">$</p>
+                  <p class="price-item-term">Per / month</p>
+                </div>
+              </div>
+              <ul class="price-inner">
+                <li class="inner--item">
+                  <h5 class="inner--item_item">10+ Operators</h5>
+                  <h5 class="inner--item_item">Notifications</h5>
+                  <Landing class="inner--item_item">Landing Pages</h5>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button type="button" class="price-btn">Order Now</button>
+        </div>
       </section>
 
       <section>
